Complete rework of Dispatch, Added DebugMode